--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework-1</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>WebStudio</h1>
+      <nav>
+        <a href="#"><b>Studio</b></a>
+        <a href="#"><b>Portfolio</b> </a>
+        <a href="#"><b>Contacts</b></a>
+      </nav>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+      </address>
+    </header>
+  </body>
 </html>
