Section Kısmı Tamamlandı

--- a/index.html
+++ b/index.html
@@ -18,5 +18,69 @@
         <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
       </address>
     </header>
+    <section id="Hero">
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+      <img src="./images/Dark-bg.png" width="180px" alt="Dark Background" />
+    </section>
+    <section id="Features">
+      <h2>Strategy</h2>
+      <p>
+        Our goal is to identify the business problem to walk away with the
+        perfect and creative solution.
+      </p>
+      <h2>Punctuality</h2>
+      <p>
+        Bring the key message to the brand's audience for the best price within
+        the shortest possible time.
+      </p>
+      <h2>Diligence</h2>
+      <p>
+        Research and confirm brands that present the strongest digital growth
+        opportunities and minimize risk.
+      </p>
+      <h2>Technologies</h2>
+      <p>
+        Design practice focused on digital experiences. We bring forth a deep
+        passion for problem-solving.
+      </p>
+    </section>
+    <section id="Team">
+      <h1>Our Team</h1>
+      <br />
+      <div id="Team Card 1">
+        <img src="./images/Team/Worker-1.png" alt="Mark Guerrero" />
+        <div>
+          <p><b>Mark Guerrero</b></p>
+          <p>Product Designer</p>
+        </div>
+      </div>
+      <div id="Team Card 2">
+        <img src="./images/Team/Worker-2.png" alt="Tom Ford" />
+        <div>
+          <p><b>Tom Ford</b></p>
+          <p>Frontend Developer</p>
+        </div>
+      </div>
+      <div id="Team Card 3">
+        <img src="./images/Team/Worker-3.png" alt="Camila Garcia" />
+        <div>
+          <p><b>Camila Garcia</b></p>
+          <p>Marketing</p>
+        </div>
+      </div>
+      <div id="Team Card 4">
+        <img src="./images/Team/Worker-4.png" alt="Daniel Wilson" />
+        <div>
+          <p><b>Daniel Wilson</b></p>
+          <p>UI Designer</p>
+        </div>
+      </div>
+      <img
+        src="./images/Section-Light-Background.png"
+        width="180"
+        alt="Light-Background"
+      />
+    </section>
   </body>
 </html>
