--- a/index.html
+++ b/index.html
@@ -82,5 +82,15 @@
         alt="Light-Background"
       />
     </section>
+    <footer>
+      <div>
+        <h1>WebStudio</h1>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+      <img src="./images/Hero-Background.png" alt="Dark Background" />
+    </footer>
   </body>
 </html>
