Hatalı kısımlar düzeltildi

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <section id="Hero">
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
-      <img src="./images/Dark-bg.png" width="180px" alt="Dark Background" />
+      <img
+        src="./images/Hero-Background.png"
+        width="180px"
+        alt="Dark Background"
+      />
     </section>
     <section id="Features">
       <h2>Strategy</h2>
@@ -90,7 +94,11 @@
           digital marketing & growth solutions.
         </p>
       </div>
-      <img src="./images/Hero-Background.png" alt="Dark Background" />
+      <img
+        src="./images/Hero-Background.png"
+        width="180px"
+        alt="Dark Background"
+      />
     </footer>
   </body>
 </html>
