Validator ile kontrol edildi. Ödev yönergeleri ile düzeltildi.

--- a/index.html
+++ b/index.html
@@ -3,86 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework-1</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
       <h1>WebStudio</h1>
       <nav>
-        <a href="#"><b>Studio</b></a>
-        <a href="#"><b>Portfolio</b> </a>
-        <a href="#"><b>Contacts</b></a>
+        <ul>
+          <li>
+            <a href="#"><b>Studio </b></a>
+          </li>
+          <li>
+            <a href="#"><b>Portfolio </b></a>
+          </li>
+          <li>
+            <a href="#"><b>Contacts</b></a>
+          </li>
+        </ul>
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
     <section id="Hero">
-      <h1>Effective Solutions for Your Business</h1>
+      <h2>Effective Solutions for Your Business</h2>
       <button type="button">Order Service</button>
       <img
-        src="./images/Hero-Background.png"
-        width="180px"
-        alt="Dark Background"
+        src="./images/backgrounds/hero-background.jpg"
+        width="180"
+        height="100"
+        alt="Hero Background"
       />
     </section>
     <section id="Features">
-      <h2>Strategy</h2>
+      <h3>Strategy</h3>
       <p>
         Our goal is to identify the business problem to walk away with the
         perfect and creative solution.
       </p>
-      <h2>Punctuality</h2>
+      <h3>Punctuality</h3>
       <p>
         Bring the key message to the brand's audience for the best price within
         the shortest possible time.
       </p>
-      <h2>Diligence</h2>
+      <h3>Diligence</h3>
       <p>
         Research and confirm brands that present the strongest digital growth
         opportunities and minimize risk.
       </p>
-      <h2>Technologies</h2>
+      <h3>Technologies</h3>
       <p>
         Design practice focused on digital experiences. We bring forth a deep
         passion for problem-solving.
       </p>
     </section>
     <section id="Team">
-      <h1>Our Team</h1>
+      <h2>Our Team</h2>
       <br />
-      <div id="Team Card 1">
-        <img src="./images/Team/Worker-1.png" alt="Mark Guerrero" />
+      <div id="Team-Card-1">
+        <img src="./images/Team/worker-1.jpg" alt="Mark Guerrero" />
         <div>
           <p><b>Mark Guerrero</b></p>
           <p>Product Designer</p>
         </div>
       </div>
-      <div id="Team Card 2">
-        <img src="./images/Team/Worker-2.png" alt="Tom Ford" />
+      <div id="Team-Card-2">
+        <img src="./images/Team/worker-2.jpg" alt="Tom Ford" />
         <div>
           <p><b>Tom Ford</b></p>
           <p>Frontend Developer</p>
         </div>
       </div>
-      <div id="Team Card 3">
-        <img src="./images/Team/Worker-3.png" alt="Camila Garcia" />
+      <div id="Team-Card-3">
+        <img src="./images/Team/worker-3.jpg" alt="Camila Garcia" />
         <div>
           <p><b>Camila Garcia</b></p>
           <p>Marketing</p>
         </div>
       </div>
-      <div id="Team Card 4">
-        <img src="./images/Team/Worker-4.png" alt="Daniel Wilson" />
+      <div id="Team-Card-4">
+        <img src="./images/Team/worker-4.jpg" alt="Daniel Wilson" />
         <div>
           <p><b>Daniel Wilson</b></p>
           <p>UI Designer</p>
         </div>
       </div>
       <img
-        src="./images/Section-Light-Background.png"
+        src="./images/backgrounds/section-light-background.jpg"
         width="180"
+        height="100"
         alt="Light-Background"
       />
     </section>
@@ -95,8 +105,9 @@
         </p>
       </div>
       <img
-        src="./images/Hero-Background.png"
-        width="180px"
+        src="./images/backgrounds/hero-background.jpg"
+        width="180"
+        height="100"
         alt="Dark Background"
       />
     </footer>
