--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
       <h2>Our Team</h2>
       <br />
       <div id="Team-Card-1">
-        <img src="./images/Team/worker-1.jpg" alt="Mark Guerrero" />
+        <img src="./images/team/worker-1.jpg" alt="Mark Guerrero" />
         <div>
           <p><b>Mark Guerrero</b></p>
           <p>Product Designer</p>
         </div>
       </div>
       <div id="Team-Card-2">
-        <img src="./images/Team/worker-2.jpg" alt="Tom Ford" />
+        <img src="./images/team/worker-2.jpg" alt="Tom Ford" />
         <div>
           <p><b>Tom Ford</b></p>
           <p>Frontend Developer</p>
         </div>
       </div>
       <div id="Team-Card-3">
-        <img src="./images/Team/worker-3.jpg" alt="Camila Garcia" />
+        <img src="./images/team/worker-3.jpg" alt="Camila Garcia" />
         <div>
           <p><b>Camila Garcia</b></p>
           <p>Marketing</p>
         </div>
       </div>
       <div id="Team-Card-4">
-        <img src="./images/Team/worker-4.jpg" alt="Daniel Wilson" />
+        <img src="./images/team/worker-4.jpg" alt="Daniel Wilson" />
         <div>
           <p><b>Daniel Wilson</b></p>
           <p>UI Designer</p>
