--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
-    <section id="Hero">
+    <!-- Sections starts here -->
+    <section id="hero">
       <h2>Effective Solutions for Your Business</h2>
       <button type="button">Order Service</button>
       <img
@@ -36,7 +37,7 @@
         alt="Hero Background"
       />
     </section>
-    <section id="Features">
+    <section id="features">
       <h3>Strategy</h3>
       <p>
         Our goal is to identify the business problem to walk away with the
@@ -58,32 +59,52 @@
         passion for problem-solving.
       </p>
     </section>
-    <section id="Team">
+    <section id="team">
       <h2>Our Team</h2>
       <br />
-      <div id="Team-Card-1">
-        <img src="./images/team/worker-1.jpg" alt="Mark Guerrero" />
+      <div id="team-card-1">
+        <img
+          src="./images/team/worker-1.jpg"
+          width="250"
+          height="250"
+          alt="Mark Guerrero"
+        />
         <div>
           <p><b>Mark Guerrero</b></p>
           <p>Product Designer</p>
         </div>
       </div>
-      <div id="Team-Card-2">
-        <img src="./images/team/worker-2.jpg" alt="Tom Ford" />
+      <div id="team-card-2">
+        <img
+          src="./images/team/worker-2.jpg"
+          width="250"
+          height="250"
+          alt="Tom Ford"
+        />
         <div>
           <p><b>Tom Ford</b></p>
           <p>Frontend Developer</p>
         </div>
       </div>
-      <div id="Team-Card-3">
-        <img src="./images/team/worker-3.jpg" alt="Camila Garcia" />
+      <div id="team-card-3">
+        <img
+          src="./images/team/worker-3.jpg"
+          width="250"
+          height="250"
+          alt="Camila Garcia"
+        />
         <div>
           <p><b>Camila Garcia</b></p>
           <p>Marketing</p>
         </div>
       </div>
-      <div id="Team-Card-4">
-        <img src="./images/team/worker-4.jpg" alt="Daniel Wilson" />
+      <div id="team-card-4">
+        <img
+          src="./images/team/worker-4.jpg"
+          width="250"
+          height="250"
+          alt="Daniel Wilson"
+        />
         <div>
           <p><b>Daniel Wilson</b></p>
           <p>UI Designer</p>
