Section kısmı Main içine alındı

--- a/index.html
+++ b/index.html
@@ -26,97 +26,99 @@
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
-    <!-- Sections starts here -->
-    <section id="hero">
-      <h2>Effective Solutions for Your Business</h2>
-      <button type="button">Order Service</button>
-      <img
-        src="./images/backgrounds/hero-background.jpg"
-        width="180"
-        height="100"
-        alt="Hero Background"
-      />
-    </section>
-    <section id="features">
-      <h3>Strategy</h3>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
-      <h3>Punctuality</h3>
-      <p>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-      </p>
-      <h3>Diligence</h3>
-      <p>
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
-      </p>
-      <h3>Technologies</h3>
-      <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </p>
-    </section>
-    <section id="team">
-      <h2>Our Team</h2>
-      <br />
-      <div id="team-card-1">
+    <main>
+      <!-- Sections starts here -->
+      <section id="hero">
+        <h2>Effective Solutions for Your Business</h2>
+        <button type="button">Order Service</button>
         <img
-          src="./images/team/worker-1.jpg"
-          width="250"
-          height="250"
-          alt="Mark Guerrero"
+          src="./images/backgrounds/hero-background.jpg"
+          width="180"
+          height="100"
+          alt="Hero Background"
         />
-        <div>
-          <p><b>Mark Guerrero</b></p>
-          <p>Product Designer</p>
+      </section>
+      <section id="features">
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+      <section id="team">
+        <h2>Our Team</h2>
+        <br />
+        <div id="team-card-1">
+          <img
+            src="./images/team/worker-1.jpg"
+            width="250"
+            height="250"
+            alt="Mark Guerrero"
+          />
+          <div>
+            <p><b>Mark Guerrero</b></p>
+            <p>Product Designer</p>
+          </div>
         </div>
-      </div>
-      <div id="team-card-2">
+        <div id="team-card-2">
+          <img
+            src="./images/team/worker-2.jpg"
+            width="250"
+            height="250"
+            alt="Tom Ford"
+          />
+          <div>
+            <p><b>Tom Ford</b></p>
+            <p>Frontend Developer</p>
+          </div>
+        </div>
+        <div id="team-card-3">
+          <img
+            src="./images/team/worker-3.jpg"
+            width="250"
+            height="250"
+            alt="Camila Garcia"
+          />
+          <div>
+            <p><b>Camila Garcia</b></p>
+            <p>Marketing</p>
+          </div>
+        </div>
+        <div id="team-card-4">
+          <img
+            src="./images/team/worker-4.jpg"
+            width="250"
+            height="250"
+            alt="Daniel Wilson"
+          />
+          <div>
+            <p><b>Daniel Wilson</b></p>
+            <p>UI Designer</p>
+          </div>
+        </div>
         <img
-          src="./images/team/worker-2.jpg"
-          width="250"
-          height="250"
-          alt="Tom Ford"
+          src="./images/backgrounds/section-light-background.jpg"
+          width="180"
+          height="100"
+          alt="Light-Background"
         />
-        <div>
-          <p><b>Tom Ford</b></p>
-          <p>Frontend Developer</p>
-        </div>
-      </div>
-      <div id="team-card-3">
-        <img
-          src="./images/team/worker-3.jpg"
-          width="250"
-          height="250"
-          alt="Camila Garcia"
-        />
-        <div>
-          <p><b>Camila Garcia</b></p>
-          <p>Marketing</p>
-        </div>
-      </div>
-      <div id="team-card-4">
-        <img
-          src="./images/team/worker-4.jpg"
-          width="250"
-          height="250"
-          alt="Daniel Wilson"
-        />
-        <div>
-          <p><b>Daniel Wilson</b></p>
-          <p>UI Designer</p>
-        </div>
-      </div>
-      <img
-        src="./images/backgrounds/section-light-background.jpg"
-        width="180"
-        height="100"
-        alt="Light-Background"
-      />
-    </section>
+      </section>
+    </main>
     <footer>
       <div>
         <h1>WebStudio</h1>
