--- a/index.html
+++ b/index.html
@@ -7,131 +7,126 @@
   </head>
   <body>
     <header>
-      <h1>WebStudio</h1>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="#"><b>Studio </b></a>
+            <a href="#"><b>studio</b></a>
           </li>
           <li>
-            <a href="#"><b>Portfolio </b></a>
+            <a href="#"><b>portfolio</b></a>
           </li>
           <li>
-            <a href="#"><b>Contacts</b></a>
+            <a href="#"><b>contacts</b></a>
           </li>
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
-      <!-- Sections starts here -->
-      <section id="hero">
-        <h2>Effective Solutions for Your Business</h2>
+      <!-- Section 1 starts here -->
+      <section id="1-hero">
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-        <img
-          src="./images/backgrounds/hero-background.jpg"
-          width="180"
-          height="100"
-          alt="Hero Background"
         />
       </section>
-      <section id="features">
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+      <!-- Section 2 starts here -->
+      <section id="2-features">
+        <h2>Features</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
-      <section id="team">
+      <!-- Section 3 starts here -->
+      <section id="3-team">
         <h2>Our Team</h2>
-        <br />
-        <div id="team-card-1">
-          <img
-            src="./images/team/worker-1.jpg"
-            width="250"
-            height="250"
-            alt="Mark Guerrero"
-          />
-          <div>
-            <p><b>Mark Guerrero</b></p>
+        <ul>
+          <li>
+            <img
+              src="./images/team/worker-1.jpg"
+              width="264"
+              height="260"
+              alt="Mark Guerrero"
+            />
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-          </div>
-        </div>
-        <div id="team-card-2">
-          <img
-            src="./images/team/worker-2.jpg"
-            width="250"
-            height="250"
-            alt="Tom Ford"
-          />
-          <div>
-            <p><b>Tom Ford</b></p>
+          </li>
+          <li>
+            <img
+              src="./images/team/worker-2.jpg"
+              width="264"
+              height="260"
+              alt="Tom Ford"
+            />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-          </div>
-        </div>
-        <div id="team-card-3">
-          <img
-            src="./images/team/worker-3.jpg"
-            width="250"
-            height="250"
-            alt="Camila Garcia"
-          />
-          <div>
-            <p><b>Camila Garcia</b></p>
+          </li>
+          <li>
+            <img
+              src="./images/team/worker-3.jpg"
+              width="264"
+              height="260"
+              alt="Camila Garcia"
+            />
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
-          </div>
-        </div>
-        <div id="team-card-4">
-          <img
-            src="./images/team/worker-4.jpg"
-            width="250"
-            height="250"
-            alt="Daniel Wilson"
-          />
-          <div>
-            <p><b>Daniel Wilson</b></p>
+          </li>
+          <li>
+            <img
+              src="./images/team/worker-4.jpg"
+              width="264"
+              height="260"
+              alt="Daniel Wilson"
+            />
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-          </div>
-        </div>
-        <img
-          src="./images/backgrounds/section-light-background.jpg"
-          width="180"
-          height="100"
-          alt="Light-Background"
+          </li>
+        </ul>
         />
       </section>
     </main>
     <footer>
       <div>
-        <h1>WebStudio</h1>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
       </div>
-      <img
-        src="./images/backgrounds/hero-background.jpg"
-        width="180"
-        height="100"
-        alt="Dark Background"
       />
     </footer>
   </body>
