--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="#"><b>studio</b></a>
+            <a href="#">Studio</a>
           </li>
           <li>
-            <a href="#"><b>portfolio</b></a>
+            <a href="#">Portfolio</a>
           </li>
           <li>
-            <a href="#"><b>contacts</b></a>
+            <a href="#">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -120,13 +120,11 @@
       </section>
     </main>
     <footer>
-      <div>
         <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
       />
     </footer>
   </body>
