--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a href="">studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="">portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a href="">contacts</a>
           </li>
         </ul>
       </nav>
@@ -120,11 +120,11 @@
       </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
       />
     </footer>
   </body>
